fix StreamPractice for better readability